# GoIt_Web_HW_7_2

./: config.ini  my_select.py  pyproject.toml  seed.py
migrations/versions/: 9b6879c51696_init.py
