[tool.poetry]
name = "goit-web-hw-7-2"
version = "0.1.0"
description = ""
authors = ["filinmbg <filinmbg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
poetry = "^1.7.0"
psycopg2 = "^2.9.9"
alembic = "^1.12.1"
faker = "^19.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
